--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 dataclasses==0.6
 pynput==1.7.6
-pywin32==305
+pywin32==304
 python-dateutil==2.8.2
-discord.py==1.7.3
+discord==1.7.3
 requests==2.28.1
 PyYAML==6.0
